--- a/invaders/Cargo.toml
+++ b/invaders/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 crossterm = "0.17.5"
 rusty_audio = "1.1.4"
 rusty_time = "0.11.0"
+mpu6050 = "0.1.6"
+linux-embedded-hal = "0.3.0"
